# file_signature

./: .gitignore  README.md
include/: ArgParser.h  ChunkProcessor.h  Data.h  FileReader.h  FileWriter.h  Hasher.h  ProduceConsumer.h  ThreadPool.h  ThreadSafeQueue.h
src/: ArgParser.cpp  CMakeLists.txt  ChunkProcessor.cpp  FileReader.cpp  FileWriter.cpp  Hasher.cpp  ProduceConsumer.cpp  main.cpp  thread_pool.cpp
src/tests/: CMakeLists.txt  randomFile  test.cpp
